[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "auto-recon"
version = "1.0.0"
description = "Automated reconnaissance framework: nmap · subfinder · httpx · nuclei"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["security", "recon", "penetration-testing", "nmap", "nuclei"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML",
    "types-requests",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
auto-recon = "main:main"

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # do not perform function calls in default args
    "N803",  # argument name should be lowercase (MITRE uses uppercase)
    "N806",  # variable in function should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["core", "modules", "reporting", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "setup.py",
    "output/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# ── Bandit (SAST) ─────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "output"]
skips = [
    "B101",  # assert_used — OK in tests
    "B603",  # subprocess — expected in a recon tool
    "B607",  # start_process_with_partial_path — tool names are intentional
]
